NEWS: Fix date and name of 1.9.2 snapshot
It's a snapshot, not a release, and the broken REFERENCE_IMAGE list
derailed me from finishing yesterday.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Release 1.9.2 (2009-06-11)
-==========================
+Snapshot 1.9.2 (2009-06-12)
+===========================
 API additions:
 
   cairo_surface_set_mime_data()
