--- a/test/README
+++ b/test/README
@@ -94,10 +94,11 @@ the software configuration used to generate the reference images.
 
 Here are some of the relevant details:
 
-  * Your system must have a copy of the Bitstream Vera font. These are
-      "Bitstream Vera Sans" (Vera.ttf);
-      "Bitstream Vera Sans Mono" (VeraMono.ttf);
-      "Bitstream Vera Serif" (VeraSe.ttf);
+  * Your system must have a copy of the Bitstream Vera font, the sha1sum of
+    the version used are listed in [...].  These are
+      "Bitstream Vera Sans" (Vera.ttf) [1d7f6fa0c34e3d50be52c16a0816bebac309fe41];
+      "Bitstream Vera Sans Mono" (VeraMono.ttf) [2c2e2ded3c903b5186f955871109f084edef4dbe];
+      "Bitstream Vera Serif" (VeraSe.ttf) [838645f09501d53647dd5edf5b961a8f8290613a];
     and also
       "Nimbus Sans L" (n019003l.pfb).
 
