[test] Mark all smask tests as XFAIL for pdf
Those tests use linear gradients which are not correctly handled by
poppler yet. See https://bugs.freedesktop.org/show_bug.cgi?id=10942

--- a/test/README
+++ b/test/README
@@ -293,6 +293,17 @@ https://bugs.freedesktop.org/show_bug.cgi?id=14580
 --------------------------------------------------
 push-group
 
+spurious horizontal stripes in color gradients
+https://bugs.freedesktop.org/show_bug.cgi?id=10942
+--------------------------------------------------
+smask 
+smask-fill 
+smask-image-mask 
+smask-mask 
+smask-paint 
+smask-stroke 
+smask-text
+
 Ghostscript does not correctly render small miters
 http://bugs.ghostscript.com/show_bug.cgi?id=690098
 --------------------------------------------------
