--- a/test/README
+++ b/test/README
@@ -99,7 +99,7 @@ Here are some of the relevant details:
       "Bitstream Vera Sans" (Vera.ttf) [1d7f6fa0c34e3d50be52c16a0816bebac309fe41];
       "Bitstream Vera Sans Mono" (VeraMono.ttf) [2c2e2ded3c903b5186f955871109f084edef4dbe];
       "Bitstream Vera Serif" (VeraSe.ttf) [838645f09501d53647dd5edf5b961a8f8290613a];
-      [the Bitsream fonts can be installed from the ttf-dejabu Debian package]
+      [the Bitstream fonts can be installed from the ttf-dejavu Debian package]
     and also
       "Nimbus Sans L" (n019003l.pfb)
       [which can be found in the gsfonts Debian package].
