[meta] Rename cairo_meta_surface_t to cairo_recording_surface_t.
The new name is more descriptive than the rather opaque meta surface.
Discussed with vigour on the mailing list and #cairo:

http://lists.cairographics.org/archives/cairo/2009-July/017571.html

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+API changes:
+
+  cairo_recording_surface_create()
+  cairo_recording_surface_ink_extents()
+
+    Renamed meta-surfaces to recording-surfaces for clarity.
+
 Snapshot 1.9.4 (2009-10-15)
 ===========================
 API additions:
