--- a/test/README
+++ b/test/README
@@ -96,9 +96,9 @@ Here are some of the relevant details:
 
   * Your system must have a copy of the Bitstream Vera font, the sha1sum of
     the version used are listed in [...].  These are
-      "Bitstream Vera Sans" (Vera.ttf) [1d7f6fa0c34e3d50be52c16a0816bebac309fe41];
-      "Bitstream Vera Sans Mono" (VeraMono.ttf) [2c2e2ded3c903b5186f955871109f084edef4dbe];
-      "Bitstream Vera Serif" (VeraSe.ttf) [838645f09501d53647dd5edf5b961a8f8290613a];
+      "Bitstream Vera Sans" (DejaVuSans.ttf) [682718dd37c3f6a4767386d3b2b27fba9b219818];
+      "Bitstream Vera Sans Mono" (DejaVuSansMono.ttf) [1cc58255d6f9df2b08e760ca38937a2957153484];
+      "Bitstream Vera Serif" (DejaVuSerif.ttf) [020e72e92cb2f66107dc18c70ac4214df4f13014];
       [the Bitstream fonts can be installed from the ttf-dejavu Debian package]
     and also
       "Nimbus Sans L" (n019003l.pfb)
