--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+Snapshot 1.9.8 (2010-06-12)
+===========================
+
+   No API changes since the last snapshot, just a whole slew of bugs fixed and
+   inconsistencies eliminated. Far too many bugs fixed to individually
+   identify. We need to thank Benjamin Otte for his fantastic work on
+   the cairo-gl backend making it more faster and more robust, Andrea Canciani
+   for finding so many bugs and developing test cases for them, as well fixing
+   them. And last but not least we must all thank Adrian Johnson for
+   continuing to eliminate bugs and improving the PostScript and PDF backends.
+
+   This snapshot represents almost 4 months of bug fixing, bring Cairo to a
+   point where we consider it almost ready to be a candidate for release.
+   There are a few known bugs left to be fixed, being tracked in
+   https://bugs.freedesktop.org/show_bug.cgi?id=24384, please give Cairo a
+   whirl and report any regressions. The plan is to release a new snapshot
+   every other week leading to a 1.10 release with a target date of
+   2010-08-16.
+
 Snapshot 1.9.6 (2010-02-19)
 ===========================
 API additions
