perf: Drop cairo_perf_ticks_t in favor of cairo_time_t
cairo_time_t offers a superset of the functions provided by
cairo_perf_ticks_t.

--- a/perf/README
+++ b/perf/README
@@ -166,7 +166,7 @@ Here is the basic structure of a performance test file:
 
     #include "cairo-perf.h"
 
-    static cairo_perf_ticks_t
+    static cairo_time_t
     do_my_new_test (cairo_t *cr, int width, int height)
     {
 	cairo_perf_timer_start ();
